use proper functions to create file URLs
Fixes #315.